--- a/src/app/style.css
+++ b/src/app/style.css
@@ -450,7 +450,7 @@ video {
 body,
 .page-wrapper {
   min-height: 100vh;
-  font-family: Inter, sans-serif;
+  /* font-family: Inter, sans-serif; */
   font-size: 1.125rem;
   line-height: 1.75rem;
   line-height: 1.66;
@@ -465,7 +465,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Plus Jakarta Sans, sans-serif;
+  /* font-family: Plus Jakarta Sans, sans-serif; */
   font-weight: 800;
   line-height: 1.05;
   letter-spacing: -2px;
@@ -3708,9 +3708,9 @@ p:last-child {
   font-family: Syne, sans-serif;
 }
 
-.font-body {
+/* .font-body {
   font-family: Inter, sans-serif;
-}
+} */
 
 .text-2xl {
   font-size: 1.5rem;
